# hysteresis_analyzer

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
include/: DataLoader.h  HysteresisAnalyzer.h  LMOptimizer.h  ModelFitter.h  ParametricModel.h  PolynomialModel.h
scripts/: plot_hysteresis.py
src/: DataLoader.cpp  HysteresisAnalyzer.cpp  LMOptimizer.cpp  ModelFitter.cpp  ParametricModel.cpp  PolynomialModel.cpp  main.cpp
